feat: 修改成jdk1.8风格的代码