@@ -25,6 +25,8 @@
 package com.iluwatar.observer.generic;
 
 import com.iluwatar.observer.WeatherType;
+
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -37,7 +39,7 @@ class OrcsTest extends ObserverTest<GenOrcs> {
 
   @Override
   public Collection<Object[]> dataProvider() {
-    return List.of(
+    return Arrays.asList(
         new Object[]{WeatherType.SUNNY, "The orcs are facing Sunny weather now"},
         new Object[]{WeatherType.RAINY, "The orcs are facing Rainy weather now"},
         new Object[]{WeatherType.WINDY, "The orcs are facing Windy weather now"},
